json communication success

--- a/题目.md
+++ b/题目.md
@@ -1,10 +1,20 @@
 # 问题描述：
 
 定义并实现M序B-/B+树的ADT，其上的基本操作包括： Search， Insert， Delete，和Ascend。
-使用B-/B+树设计一个图书管理系统， 每种书的登记内容包括书号、书名、作者、现存量
+使用B-/B+树设计一个图书管理系统， 
+每种书的登记内容包括
+书号、
+书名、
+作者、
+现存量
 和总库存量； 关键字为书号， 图书管理基本业务都是通过书号进行的.
 
 ## 主要业务功能如下：
+
+增
+删
+改Create   Retrieve  Update  Delete
+查
 
 1. 采编入库：新购一种书，确定书号后，登记到图书账目表中，如果表中已有，则只将库存
 量增加；
